# KoompiPlay

./: .gitignore
RESEARCH/mul_table/: .env  Cargo.toml
RESEARCH/mul_table/Images/2020-04-16-063633_create_user/: up.sql
RESEARCH/mul_table/Images/2020-04-16-070318_create_storage/: up.sql
RESEARCH/mul_table/db-design/: multiple table.html
RESEARCH/mul_table/interface/: user.css  user.html
RESEARCH/mul_table/migrations/2020-04-16-094149_create_storage/: down.sql
RESEARCH/mul_table/src/: lib.rs  models.rs  schema.rs
basic_json_web_token/: Cargo.toml
basic_json_web_token/src/: main.rs
basic_jwt/: Cargo.toml
basic_jwt/src/: main.rs
date-time/: Cargo.toml
date-time/src/: main.rs
duration/: Cargo.toml
duration/src/: main.rs
front-end/: login.html  register.html  registerStyle.css  upload_image.html  userInfo.html  userInfoStyle.css
json-response/: Cargo.toml
json-response/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
quiz-game/: game.css  game.html
quiz-game/game-back-end/: .env  Cargo.toml
quiz-game/game-back-end/examples/: test.rs
quiz-game/game-back-end/migrations/2020-04-30-060921_create_player/: up.sql
quiz-game/game-back-end/src/: lib.rs  models.rs  schema.rs  user.rs
upload_retrieve_img/: .env  Cargo.toml
upload_retrieve_img/migrations/2020-04-15-133833_create_img/: down.sql  up.sql
upload_retrieve_img/src/: index.html  main.rs  paste_id.rs  schema.rs
upload_retrieve_img/test_img/: Cargo.toml
upload_retrieve_img/test_img/migrations/2020-04-15-135424_test_array/: down.sql  up.sql
upload_retrieve_img/test_img/migrations/2020-04-16-025123_create_img/: down.sql  up.sql
upload_retrieve_img/test_img/src/: lib.rs  models.rs  schema.rs
userInfo/: Cargo.toml
userInfo/examples/: test.rs
userInfo/image-bank/: mx2U  pqIS
userInfo/migrations/2020-02-18-135659_create_user/: down.sql  up.sql
userInfo/src/: email_addr.rs  lib.rs  models.rs  schema.rs  token.rs
