[package]
name = "upload_retrieve_img"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket-include-static-resources = "0.9.3"
rocket-raw-response = "0.4.8"
rocket-multipart-form-data = "0.8.1"
rocket = "0.4.2"
mime = "0.3.12"
multipart = {version = "0.16.1", default-features = false, features = ["server"]}
chrono = "0.4.6"
rand = "0.7.3"

serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }

rocket_contrib = "0.4.2"
rocket_cors = "0.5.2"
http = "0.2.1"
url = "2.1.1"

[dev-dependencies]
rocket-include-static-resources = "0.8"
rocket-raw-response = "0.4"
