[package]
name = "userInfo"
version = "0.1.0"
authors = ["koompi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
chrono = "0.4.10"
serde = { version = "1.0.0", features = ["derive"]}
dotenv = "0.9.0"




