[package]
name = "userInfo"
version = "0.1.0"
authors = ["koompi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
chrono = "0.4.11"
jsonwebtoken = "*"
serde = { version = "1.0", features = ["derive"]}
dotenv = "0.9.0"

rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_json = "1.0.48"

validator = "0.10.0"



